[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene/drag3d/drag3d.gd" type="Script" id=1]
[ext_resource path="res://Scene/drag3d/player_ichuen_full.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/drag3d/player_mno_full.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/drag3d/player_olay_full.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/drag3d/player_speng_full.tscn" type="PackedScene" id=5]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.945098, 0.647059, 0.886275, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

[node name="player_ichuen_full" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0 )

[node name="player_mno_full" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -1, 0 )

[node name="player_olay_full" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -1, 0 )

[node name="player_speng_full" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -1, 0 )

[connection signal="body_entered" from="player_ichuen_full" to="." method="_on_player_ichuen_full_body_entered"]
[connection signal="input_event" from="player_ichuen_full" to="." method="_on_player_ichuen_full_input_event"]
